--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
 fastapi==0.115.6
+greenlet==3.1.1
 idna==3.10
+mypy==1.13.0
+mypy-extensions==1.0.0
 pydantic==2.10.3
 pydantic_core==2.27.1
 sniffio==1.3.1
+SQLAlchemy==2.0.36
+sqlalchemy-stubs==0.4
 starlette==0.41.3
 typing_extensions==4.12.2
