--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
 fastapi==0.115.6
 greenlet==3.1.1
 idna==3.10
+Mako==1.3.7
+MarkupSafe==3.0.2
 mypy==1.13.0
 mypy-extensions==1.0.0
 pydantic==2.10.3
